--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.7.4",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "lucide-react": "^0.474.0",
